@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.7613 2004/10/30 06:26:58 minskim Exp $
+$NetBSD: CHANGES,v 1.7614 2004/10/30 06:31:02 minskim Exp $
 
 Changes to the packages collection and infrastructure in 2004:
 
@@ -4977,3 +4977,4 @@ Changes to the packages collection and infrastructure in 2004:
 	Added swapd-1.0 [xtraeme 2004-10-30]
 	Updated tcl to 8.4.7nb3 [minskim 2004-10-30]
 	Updated tcl-expect to 5.38.0nb3 [minskim 2004-10-30]
+	Updated docbook-simple to 1.1rc2 [minskim 2004-10-30]
